# Autodesk-Fusion-360-MCP-Server

./: .gitignore  FINAL_VALIDATION_REPORT.md  InstallAddin.py  Install_Addin.py  Install_Addin_File.py  Install_Addin_Fixed.py  Install_Addin_Symlink.py  LICENSE  README.md  TODO.md  pyproject.toml  test_api_research.py
.kiro/agents/: fusion-360.json
.kiro/hooks/: sync-version-on-spec.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/bridge-modularization/: design.md  requirements.md  tasks.md
.kiro/specs/cam-setup-management/: design.md  requirements.md  tasks.md
.kiro/specs/config-endpoint-sync/: design.md  requirements.md  tasks.md
.kiro/specs/dialog-reader/: design.md  (+2 more)
.kiro/steering/: config-endpoint-sync.md  fusion-360-business-language.md  fusion-bridge-modular-architecture.md  fusion-mcp-modular-architecture.md  fusion-mcp-patterns.md  prevent-duplicate-servers.md  product.md  python-testing.md  quick-reference.md  structure.md  tech.md
FusionMCPBridge/: .env  FusionMCPBridge.manifest  FusionMCPBridge.py  cam.py  model_id_research.py  tool_library.py  wcs_api_research.py
FusionMCPBridge/core/: __init__.py  config.py  error_handling.py  integration.py  loader.py  router.py  server.py  task_queue.py  validation.py
FusionMCPBridge/handlers/: __init__.py
FusionMCPBridge/tests/: __init__.py  test_core_config.py  test_core_loader.py  test_core_router.py  test_core_validation.py  test_final_validation.py  test_integration.py
FusionMCPBridgeDebugger/: FusionMCPBridgeDebugger.manifest  FusionMCPBridgeDebugger.py
MCP/: MCP.py  cam.py  cert.pem  config.py  key.pem
Server/: MCP_Server.py  MODULAR_ARCHITECTURE.md  cleanup.py  cli.py  config.py  interceptor.py  requirements.txt
Server/core/: __init__.py  config.py  interceptor.py  loader.py  registry.py  request_handler.py  server.py
Server/prompts/: __init__.py  registry.py  templates.py
Server/tests/: test_core_config.py  test_core_registry.py  test_core_request_handler.py
Server/tools/: __init__.py
docs/: README.md
docs/architecture/: DATA_FLOW.md  MODULAR_ARCHITECTURE.md  MODULAR_SYSTEM_IMPLEMENTATION.md  MODULE_INTERFACE_REFERENCE.md
docs/guides/: CONFIGURATION_MANAGEMENT.md  DEVELOPER_ONBOARDING.md  ERROR_HANDLING.md
docs/research/: CAM_SETUP_API_RESEARCH.md  TERMINOLOGY_UPDATE_SUMMARY.md
docs/testing/: BACKWARD_COMPATIBILITY_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  README.md
src/fusion_mcp/: __init__.py  cli.py  config.py  server.py
tests/: INTEGRATION_TEST_SUMMARY.md  README.md  __init__.py  manual_compatibility_script.py  run_integration_validation.py  test_api_structure.py  test_backward_compatibility.py  test_cam_integration.py  test_complete_backward_compatibility.py  test_core_config.py  test_core_loader.py  test_core_registry.py  test_core_request_handler.py  test_error_scenarios_edge_cases.py  test_integration_end_to_end.py  test_integration_heights.py  test_integration_modular_system.py  test_mcp_tools.py  test_performance_stability.py  validate_integration.py
(+72 files in other folders)
