[project]
name = "fusion-mcp"
version = "0.1.0"
description = "MCP integration for Autodesk Fusion 360"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.0",
    "uvicorn>=0.35.0",
    "requests>=2.32.0",
]

[project.scripts]
install-fusion-plugin = "fusion_mcp.cli:install_plugin"
start-mcp-server = "fusion_mcp.cli:start_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion_mcp"]
